--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,12 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.4"
+    "mongoose": "^8.5.4",
+    "nodemailer": "^6.9.15",
+    "vite-plugin-rewrite-all": "^1.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
